# ECS

./: .clang-tidy  CMakeLists.txt  README.md  conanfile.txt
include/: entity.hpp  id_type.hpp  registry.hpp  type_info.hpp
include/ecs/: registry.hpp  type_info.hpp
src/: CMakeLists.txt  entity.cpp  registry.cpp  test.cpp
tests/: CMakeLists.txt  basic_test.cpp  entity_test.cpp  registry_test.cpp  type_info_test.cpp
